adding flink and spark updates for benchmarking